# AarchGate-Eureka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: bench_expert_review.cpp  bench_native_scan.cpp  bench_production_p1.cpp  bench_reconstruct.cpp  bench_v2_speeds.cpp
examples/: lex_vs_the_world.py
include/eureka/: circuits.hpp  evaluator.hpp
include/lex/: dispatcher.hpp  exporter.hpp  ingester.hpp
include/lex/ingest/: adaptive_ingester.hpp  promotion_daemon.hpp
include/lex/jit/: plan_cache.hpp  query_planner.hpp
include/lex/storage/: bloom_filter.hpp  row_group.hpp  zone_map.hpp
src/: circuits.cpp  evaluator.cpp  visualizer.py
src/lex/: dispatcher.cpp  exporter.cpp  ingester.cpp
src/lex/ingest/: adaptive_ingester.cpp  promotion_daemon.cpp
src/lex/jit/: plan_cache.cpp  query_planner.cpp
tests/: benchmark_validation.py  test_accuracy.cpp  test_adaptive_storage.cpp  test_production_fuzzer.cpp  test_pruned_jit.cpp
